--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     react code inside even before we have declared and imported react to our
     project -->
 
-    <script
+
+    <!-- we dont need the below cdn links  -->
+    <!-- <script
       crossorigin 
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    ></script> -->
+
+
+    <script type='module' src="./App.js"></script>
   </body>
 </html>
