EP 3: Laying foundation part 1

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Namaste React</title>
   </head>
   <body>
-    <div>Hello Top from html</div>
+    
     <div id="root">
-      <h1>Harshitha is here!</h1>  <!-- this H1 tag is being replaced by the cide in App.js, but this is rendered initailly on the website before overriden bu app.js-->
+      <h1>Not Rendered!</h1>  <!-- this H1 tag is being replaced by the code App.js, but this is rendered initailly on the website before overriden bu app.js-->
     </div>
-    <div>Hello Bottom from html</div>
 
     <!-- suppose if we change the order of the file
     
